--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1019,10 +1019,10 @@
     "# Cal predictions\n",
     "y_pred = logreg.predict(X_test)\n",
     "\n",
+    "\n",
     "# Calculated the balanced accuracy score\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
-    "\n",
-    "balanced_accuracy_score(y_test, y_pred)\n"
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1196,7 +1196,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1373,7 +1375,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
